--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -54,7 +54,7 @@
         <p>Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <span class="text-black text-center pp p-5" id="Milanesa-c-g"></span>
+        <span class="text-black text-center pp p-5" id="milanesa"></span>
         <!-- <img class="precio " src="../../menu-pizzamigo/3500.png" alt="2800" srcset=""> -->
       </div>
       <div class="col-6 mt-5">
@@ -62,7 +62,7 @@
         <p>Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <span class="text-black text-center pp p-5" id="bifeDeLomo"></span>
+        <span class="text-black text-center pp p-5" id="bifedelomo"></span>
 
         <!-- <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset=""> -->
       </div>
@@ -71,42 +71,42 @@
         <p>Milanesa Napolitana With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3800.png" alt="3000" srcset="">
+        <span class="text-black text-center pp p-5" id="napolitana"></span>
       </div>
       <div class="col-6 mt-5">
         <!-- costilla a la barbacoa -->
         <p>Barbecue Ribs With Spain Potatoes</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/4000.png" alt="3300" srcset="">
+        <span class="text-black text-center pp p-5" id="costillitasbarbacoa"></span>
       </div>
       <div class="col-6 mt-5">
         <!-- bife de pollo -->
         <p>Chicken Steak With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3300.png" alt="2800" srcset="">
+        <span class="text-black text-center pp p-5" id="bifedepollo"></span>
       </div>
       <div class="col-6 mt-5">
         <!-- lomo a la frontera -->
         <p>Frontier Steak</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset="">
+        <span class="text-black text-center pp p-5" id="lomoalafrontera"></span>
       </div>
       <div class="col-6 mt-5">
         <!-- lomo al champ -->
         <p>Steak with Mushrooms Sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/4300.png" alt="3500" srcset="">
+        <span class="text-black text-center pp p-5" id="lomoalchampi"></span>
       </div>
       <div class="col-6 mt-5">
         <!-- pollo al champi -->
         <p>Chicken with mushrooms sauce</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/4000.png" alt="3000" srcset="">
+        <span class="text-black text-center pp p-5" id="pollochampi"></span>
       </div>
       <!-- <div class="col-6 mt-5">
         <p>Mix Brochet</p>
@@ -119,7 +119,7 @@
         <p>Costelette With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3800.png" alt="3000" srcset="">
+        <span class="text-black text-center pp p-5" id="costeleta"></span>
       </div>
 
 
@@ -129,7 +129,7 @@
         <p>Riojan style chops With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio" src="../../menu-pizzamigo/4100.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="costeletariojana"></span>
       </div>
 
       <div class="col-6 mt-5">
@@ -137,7 +137,7 @@
         <p>pork Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../../menu-pizzamigo/3300.png" class="precio" alt="" srcset="">
+        <span class="text-black text-center pp p-5" id="milacerdo"></span>
       </div>
 
 
@@ -146,7 +146,7 @@
         <p>eggplant Milanesa With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../../menu-pizzamigo/3000.png" class="precio" alt="2500" srcset="">
+        <span class="text-black text-center pp p-5" id="milaberenjena"></span>
       </div>
 
 
@@ -155,7 +155,7 @@
         <p>Chicken Supreme With Garnish</p>
       </div>
       <div class="col-6 mt-5">
-        <img src="../../menu-pizzamigo/3300.png" class="precio" alt="2700" srcset="">
+        <span class="text-black text-center pp p-5" id="suprema"></span>
       </div>
 
 
@@ -166,7 +166,7 @@
         <p>Milanesa with fried egg</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../../menu-pizzamigo/3800.png" alt="3000" srcset="">
+        <span class="text-black text-center pp p-5" id="milacaballo"></span>
       </div>
 
         <!-- Tabla de milanesa -->
@@ -179,39 +179,39 @@
           <p>Milanesa Napolitana</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio " src="../../menu-pizzamigo/7500.png" alt="7500" srcset="">
+          <span class="text-black text-center pp p-5" id="tablanapo"></span>
         </div>
   
         <div class="col-6 mt-5">
           <p>Milanesa with fried egg</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio " src="../../menu-pizzamigo/7800.png" alt="3200" srcset="">
+          <span class="text-black text-center pp p-5" id="tablacaballo"></span>
         </div>
         <div class="col-6 mt-5">
           <p>Milanesa with Cheddar, bacon and green onion chopped </p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio " src="../../menu-pizzamigo/8500.png" alt="3200" srcset="">
+          <span class="text-black text-center pp p-5" id="tablacheddar"></span>
         </div>
         <div class="col-6 mt-5">
           <p>Milanesa to the Fugazzeta</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio " src="../../menu-pizzamigo/7500.png" alt="3200" srcset="">
+          <span class="text-black text-center pp p-5" id="tablafugazzeta"></span>
         </div>
         <div class="col-6 mt-5">
           <p>Milanesa with Corn</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio " src="../../menu-pizzamigo/7800.png" alt="3200" srcset="">
+          <span class="text-black text-center pp p-5" id="milachoclo"></span>
         </div>
           <!-- Fin tabla -->
 
 
 
       <div class="col-12 mt-5">
-        <h2 class="marco  text-center">Each Garnish $1800</h2>
+        <h2 class="marco  text-center">Each Garnish <span id="guarnicion"></span></h2>
       </div>
 
       <div class="col-12 text-center mt-5">
@@ -251,11 +251,11 @@
       </div>
       <div class="col-6 text-center">
         <p>Per Unite</p>
-        <img class="precio" src="../../menu-pizzamigo/400.png" alt="" srcset="">
+        <span class="text-black text-center pp p-5" id="empanadau"></span>
       </div>
       <div class="col-6 text-center">
         <p>Dozen</p>
-        <img class="precio" src="../../menu-pizzamigo/4000.png" alt="" srcset="">
+        <span class="text-black text-center pp p-5" id="empanadadoc"></span>
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -284,21 +284,21 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="lomito"></span>
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="mila"></span>
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2800.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="hambueguesa"></span>
       </div>
       <div class="col-7 mt-5 text-end">
         <p>BURGUER</p>
@@ -310,22 +310,22 @@
       </div>
       <div class="col-6  ">
         <p>1 PERSON</p>
-        <img class="precio " src="../../menu-pizzamigo/3000.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="chacarero1p"></span>
       </div>
       <div class="col-6  ">
         <p>2 PERSONS</p>
-        <img class="precio " src="../../menu-pizzamigo/6000.png" alt="$4500" srcset="">
+        <span class="text-black text-center pp p-5" id="chacarero2p"></span>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/1800.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="papas"></span>
       </div>
       <div class="col-7 mt-5 text-end">
         <p>ONE SERVING OF FRIED POTATOES</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/2200.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="papasbravas"></span>
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS (HOT FRIES WITH CHEDDAR AND BACON)</p>
@@ -409,7 +409,7 @@
   </footer>
 
   <!-- link js -->
-  <script src="../../menu-pizzamigo/web/js/menu.js"></script>
+  <script src="../../menu-pizzamigo/web/js/plato.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
