--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -62,7 +62,7 @@
           <p>COCA COLA 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1600.png" alt="1000" srcset="">
+          <span class="text-black text-center pp p-5" id="coca1l"></span>
         </div>
       </div>
 
@@ -71,8 +71,8 @@
           <p>COCA COLA 1,5L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1800.png" alt="1300" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="coca15l"></span>       
+         </div>
       </div>
 
       <div class="row">
@@ -80,8 +80,7 @@
           <p>FANTA 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1600.png" alt="1000" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="fanta1l"></span>        </div>
       </div>
 
       <div class="row">
@@ -89,8 +88,7 @@
           <p> SPRITE 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1600.png" alt="600" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="sprite1l"></span>        </div>
       </div>
 
       <div class="row">
@@ -98,8 +96,7 @@
           <p>COCA COLA 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="600" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="coca300"></span>        </div>
       </div>
 
       <div class="row">
@@ -107,8 +104,7 @@
           <p>FANTA 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="600" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="fanta300"></span>        </div>
       </div>
 
       <div class="row">
@@ -116,8 +112,7 @@
           <p>SPRITE 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../900.png" alt="600" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="sprite300"></span>        </div>
       </div>
 
       <div class="row">
@@ -125,8 +120,7 @@
           <p>AGUA SABORIZADA 500 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1000.png" alt="600" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="aguasav"></span>        </div>
       </div>
 
       <!-- CERVEZA -->
@@ -141,8 +135,7 @@
           <p>SALTA RUBIA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2500.png" alt="1200" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="saltarubia"></span>        </div>
       </div>
 
       <div class="row">
@@ -150,8 +143,7 @@
           <p>SALTA NEGRA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2500.png" alt="1200" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="saltanegra"></span>        </div>
       </div>
 
       <div class="row">
@@ -159,8 +151,7 @@
           <p>HEINEKEN</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2900.png" alt="1400" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="heineken"></span>        </div>
       </div>
 
       <div class="row">
@@ -168,8 +159,7 @@
           <p>IMPERIAL</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2500.png" alt="1400" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="imperial"></span>        </div>
       </div>
 
       <div class="row">
@@ -177,8 +167,7 @@
           <p>MILLER</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2700.png" alt="1400" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="miller"></span>        </div>
       </div>
 
       <div class="row">
@@ -186,8 +175,7 @@
           <p>CORONA 710cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2500.png" alt="1400" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="corona710"></span>        </div>
       </div>
 
       <div class="row">
@@ -195,8 +183,7 @@
           <p>CORONA 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1500.png" alt="1000" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="corona330"></span>        </div>
       </div>
 
       <div class="row">
@@ -204,8 +191,7 @@
           <p>CERVEZA SOL 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1200.png" alt="1000" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="sol"></span>        </div>
       </div>
 
       <div class="row">
@@ -213,8 +199,7 @@
           <p>CERVEZA EN LATA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1200.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="lata"></span>        </div>
       </div>
 
       <div class="row">
@@ -223,8 +208,7 @@
           </p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../1600.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="laton"></span>        </div>
       </div>
 
       <div class="row">
@@ -232,8 +216,7 @@
           <p>FERNET + COCA CHICA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2000.png" alt="" srcset="">
-        </div>
+<span class="text-black text-center pp p-5" id="fernet"></span>        </div>
       </div>
 
       <div class="row">
@@ -241,8 +224,7 @@
           <p>CAMPARI ORANGE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2000.png" alt="" srcset="">
-        </div>
+<span class="text-black text-center pp p-5" id="campari"></span>        </div>
       </div>
 
       <div class="row">
@@ -250,8 +232,7 @@
           <p>GANCIA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../2000.png" alt="" srcset="">
-        </div>
+<span class="text-black text-center pp p-5" id="gancia"></span>        </div>
       </div>
 
 
@@ -269,7 +250,7 @@
       </div>
     </footer>
     <!-- link js -->
-    <script src="./js/menu.js"></script>
+    <script src="./js/bebidas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
