--- a/menu-pizzamigo-english/web/bebidas.html
+++ b/menu-pizzamigo-english/web/bebidas.html
@@ -61,8 +61,7 @@
           <p>COKE 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1600.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="coca1l"></span>        </div>
       </div>
 
       <div class="row">
@@ -70,8 +69,7 @@
           <p>COKE 1,5L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1800.png" alt="1300" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="coca15l"></span>        </div>
       </div>
 
       <div class="row">
@@ -79,8 +77,7 @@
           <p>FANTA 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1600.png" alt="" srcset="">
-        </div>
+<span class="text-black text-center pp p-5" id="fanta1l"></span>        </div>
       </div>
 
       <div class="row">
@@ -88,8 +85,7 @@
           <p> SPRITE 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1600.png" alt="" srcset="">
-        </div>
+<span class="text-black text-center pp p-5" id="sprite1l"></span>        </div>
       </div>
 
       <div class="row">
@@ -97,8 +93,7 @@
           <p>COKE 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/900.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="coca300"></span>        </div>
       </div>
 
       <div class="row">
@@ -106,8 +101,7 @@
           <p>FANTA 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/900.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="fanta300"></span>        </div>
       </div>
 
       <div class="row">
@@ -115,8 +109,7 @@
           <p>SPRITE 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/900.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="sprite300"></span>        </div>
       </div>
 
       <div class="row">
@@ -124,8 +117,7 @@
           <p>FLAVORED WATER 500 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1000.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="aguasav"></span>        </div>
       </div>
 
       <!-- CERVEZA -->
@@ -140,8 +132,7 @@
           <p>LAGER SALTA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2500.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="saltarubia"></span>        </div>
       </div>
 
       <div class="row">
@@ -149,8 +140,7 @@
           <p>BLACK SALTA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2500.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="saltanegra"></span>        </div>
       </div>
 
       <div class="row">
@@ -158,8 +148,7 @@
           <p>HEINEKEN</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2900.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="heineken"></span>        </div>
       </div>
 
       <div class="row">
@@ -167,8 +156,7 @@
           <p>IMPERIAL</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2500.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="imperial"></span>        </div>
       </div>
 
       <div class="row">
@@ -176,8 +164,7 @@
           <p>MILLER</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2700.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="miller"></span>        </div>
       </div>
 
       <div class="row">
@@ -185,8 +172,7 @@
           <p>CORONA 710cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2500.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="corona710"></span>        </div>
       </div>
 
       <div class="row">
@@ -194,8 +180,7 @@
           <p>CORONA 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1500.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="corona330"></span>        </div>
       </div>
 
       <div class="row">
@@ -203,8 +188,7 @@
           <p>BEER SOL 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1200.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="sol"></span>        </div>
       </div>
 
       <div class="row">
@@ -212,8 +196,7 @@
           <p>CANNED BEER</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1200.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="lata"></span>        </div>
       </div>
 
       <div class="row">
@@ -222,8 +205,7 @@
           </p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/1600.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="laton"></span>        </div>
       </div>
 
       <!-- TRAGOS -->
@@ -232,16 +214,14 @@
           <p>FERNET + SMALL COKE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2000.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="fernet"></span>        </div>
       </div>
       <div class="row">
         <div class="col-6 mt-5">
           <p>CAMPARI ORANGE</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2000.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="campari"></span>        </div>
       </div>
 
       <div class="row">
@@ -249,8 +229,7 @@
           <p>GANCIA</p>
         </div>
         <div class="col-6 mt-5">
-          <img class="precio" src="../../menu-pizzamigo/2000.png" alt="" srcset="">
-        </div>
+          <span class="text-black text-center pp p-5" id="gancia"></span>        </div>
       </div>
 
     </div>
@@ -267,7 +246,7 @@
       </div>
     </footer>
     <!-- link js -->
-    <script src="./js/menu.js"></script>
+    <script src="../../menu-pizzamigo/web/js/bebidas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
