--- a/menu-pizzamigo/web/ensalada.html
+++ b/menu-pizzamigo/web/ensalada.html
@@ -41,11 +41,13 @@
     </div>
     <!-- fin de banner -->
   </div>
-  <div class="row">
+  <div class="row text-center">
     <div class="col-12 mt-5 text-center">
       <p>ARMA TU PROPIA ENSALADA CON 6 VARIEDADES A GUSTO</p>
     </div>
-    <div class="col-12  d-flex justify-content-center"><img class="precio" src="../2500.png" alt="1800" srcset=""></div>
+    <div class="col-12">
+      <span class="text-black text-center pp p-5" id="ensalada"></span>
+    </div>
   </div>
   <div class="row mt-5">
     <div class="col-6">
@@ -116,7 +118,7 @@
     <span class="text-center text-light">Creado por <a class="footer" href="https://www.instagram.com/fedex_rater/">Federico Hidalgo</a></span>
   </div>
 </footer>
-<script src="./js/menu.js"></script>
+<script src="./js/ensalada.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
