--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -149,7 +149,7 @@
       <div class="col-6 mt-5">
         <span class="text-black text-center pp p-5" id="milacaballo"></span>
       </div>
-      <!-- Tabla de milanesa -->
+      <!-------------------------- Tabla de milanesa ------------------------>
 
       <div class="col-12 mt-5">
         <h2 class="marco text-center">Tabla de Milanesa P/Compartir + Guarnición + Bebida 1L</h2>
@@ -159,37 +159,37 @@
         <p>Mila Napolitana</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../7500.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="tablanapo"></span>
       </div>
 
       <div class="col-6 mt-5">
         <p>Mila a Caballo</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../7800.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="tablacaballo"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Mila Cheddar C/bacon, verdeo</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../8500.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="tablacheddar"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Mila Fugazzeta</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../7500.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="tablafugazzeta"></span>
       </div>
       <div class="col-6 mt-5">
         <p>Mila Choclo</p>
       </div>
       <div class="col-6 mt-5">
-        <img class="precio " src="../7800.png" alt="3200" srcset="">
+        <span class="text-black text-center pp p-5" id="milachoclo"></span>
       </div>
         <!-- Fin tabla -->
 
       <div class="col-12 mt-5">
-        <h2 class="marco  text-center">GUARNICIÓN C/U $1800</h2>
+        <h2 class="marco  text-center">GUARNICIÓN C/U <span id="guarnicion"></span></h2>
       </div>
 
       <div class="col-12 text-center mt-5">
@@ -222,11 +222,11 @@
       </div>
       <div class="col-6 text-center">
         <p>Unidad</p>
-        <img class="precio" src="../400.png" alt="" srcset="">
+        <span class="text-black text-center pp p-5" id="empanadau"></span>
       </div>
       <div class="col-6 text-center">
         <p>Docena</p>
-        <img class="precio" src="../4000.png" alt="" srcset="">
+        <span class="text-black text-center pp p-5" id="empanadadoc"></span>
       </div>
       <!-- contenido de entradas -->
       <div class="col-12 text-center mt-5">
@@ -255,21 +255,21 @@
       </div>
       <!-- contenido sandwich -->
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../3000.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="lomito"></span>
       </div>
       <div class="col-6 mt-5 text-end">
         <p>LOMO</p>
       </div>
 
       <div class="col-6 mt-5 ">
-        <img class="precio " src="../3000.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="mila"></span>
       </div>
       <div class="col-6 mt-5 text-end">
         <p>MILA</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../2800.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="hambueguesa"></span>
       </div>
       <div class="col-7 mt-5 text-end">
         <p>HAMBURGUESA</p>
@@ -280,22 +280,22 @@
       </div>
       <div class="col-6  ">
         <p>1 PERSONA</p>
-        <img class="precio " src="../3000.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="chacarero1p"></span>
       </div>
       <div class="col-6  ">
         <p>2 PERSONAS</p>
-        <img class="precio " src="../6000.png" alt="$4500" srcset="">
+        <span class="text-black text-center pp p-5" id="chacarero2p"></span>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../1800.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="papas"></span>
       </div>
       <div class="col-7 mt-5 text-end">
         <p>PORCIÓN DE PAPAS</p>
       </div>
 
       <div class="col-5 mt-5 ">
-        <img class="precio " src="../2200.png" alt="precio" srcset="">
+        <span class="text-black text-center pp p-5" id="papasbravas"></span>
       </div>
       <div class="col-7 mt-5 text-center">
         <p>PAPAS BRAVAS CON CHEDDAR Y PANCETA</p>
