--- a/menu-pizzamigo-english/web/postres.html
+++ b/menu-pizzamigo-english/web/postres.html
@@ -47,7 +47,7 @@
                 <p class="m"t-3>Slice of Pie</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="tarta"></span>
               </div>
 
             </div>
@@ -57,7 +57,7 @@
                 <p class="mt-3">Flan</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="flan"></span>
               </div>
 
             </div>
@@ -67,7 +67,7 @@
                 <p class="mt-3">Bread Pudding</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="budindepan"></span>
               </div>
 
             </div>
@@ -77,7 +77,7 @@
                 <p class="mt-3">Ice Cream</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="helado"></span>
               </div>
 
             </div>
@@ -87,7 +87,7 @@
                 <p class="mt-3">Fruits Salad</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-4 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="ensaladadefrutas"></span>
               </div>
 
             </div>
@@ -97,7 +97,7 @@
                 <p class="mt-3">Desserts Shots</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-2 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="shotdepostres"></span>
               </div>
 
             </div>
@@ -107,7 +107,7 @@
                 <p class="mt-3">Cheese with Chayote</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-4 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="qcayote"></span>
               </div>
 
             </div>
@@ -117,7 +117,7 @@
                 <p class="mt-3">Sweet Potato in Syrup</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-4 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="batataalmibar"></span>
               </div>
 
             </div>
@@ -127,7 +127,7 @@
                 <p class="mt-3">Yellow Squash in Syrup</p>
               </div>
               <div class="col-6 mt-5 align-content-center justify-content-center">
-                <img class="precio mt-4 " src="../../menu-pizzamigo/1100.png" alt="" srcset="">
+                <span class="text-black text-center pp p-5" id="coreanitoalmibar"></span>
               </div>
 
             </div>
@@ -145,7 +145,7 @@
             </div>
         </footer>
           <!-- link js -->
-          <script src="./js/menu.js"></script>
+          <script src="../../menu-pizzamigo/web/js/postre.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       </body>
 </body>
