--- a/menu-pizzamigo/web/index.html
+++ b/menu-pizzamigo/web/index.html
@@ -28,6 +28,7 @@
           <a class="nav-link text-light" href="plato.html">Minutas</a>
           <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
           <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+          <a class="nav-link text-light" href="tragos.html">Tragos</a>
           <a class="nav-link text-light" href="postres.html">Postre</a>
           <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
               src="../idioma-en-ingles.png" /> English</a>
@@ -83,6 +84,16 @@
         <span class="texto">Bebidas</span>
 
       </div>
+
+      <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
+        <a href="tragos.html"> <img class="redo" src="../coctel-cubierto-rodaja-naranja.jpg" alt="Postres"
+            srcset=""></a>
+      </div>
+      <div class="col-12 text-center text-light">
+        <span class="texto">Tragos</span>
+
+      </div>
+
       <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
         <a href="postres.html"> <img class="redo" src="../kobby-mendez-idTwDKt2j2o-unsplash.jpg" alt="Postres"
             srcset=""></a>
