--- a/menu-pizzamigo/web/tragos.html
+++ b/menu-pizzamigo/web/tragos.html
@@ -41,7 +41,7 @@
     </div>
   </nav>
   <!-- end nav -->
-  <div class="container text-light">
+  <div class="container text-light  texto">
     <div class="row">
       <div class="col-12  tragos">
         <h2 class="mt-4 text-light"> TRAGOS</h2>
@@ -49,18 +49,18 @@
     </div>
 
     <div class="row">
-      <div class="col-6 mt-5">
-        <h3>MOJITOS</h3>
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">MOJITOS</h3>
         <br>
         <p>Azúcar + Hielo Picado + Limón Picado + Ron + Menta en Ramas</p>
       </div>
       <div class="col-6 mt-5">
-        <span class="text-black text-center pp p-5" id="mojito"></span>
+        <span class="text-black text-center pp p-5" id="mojitos"></span>
 
       </div>
 
-      <div class="col-6 mt-5">
-        <h3>DAIQUIRI</h3>
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">DAIQUIRI</h3>
         <br>
         <p>Azúcar + Hielo Picado + Ron + Zumo de Limón + Rodaja de Limón</p>
       </div>
@@ -69,140 +69,189 @@
 
       </div>
 
-      <div class="col-6 mt-5">
-        <h3>CAMIPIROSKA</h3>
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">CAIPIROSKA</h3>
         <br>
         <p>Vodka + Almíbar + 4 Rodajas de Lima + Hielo</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>CAIPIRIÑA</h3>
+        <span class="text-black text-center pp p-5" id="caipiroska"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">CAIPIRIÑA</h3>
         <br>
         <p>Limón Cortado + Cachaça + Almíbar + Hielo</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>CUBA LIBRE </h3>
+        <span class="text-black text-center pp p-5" id="caipiriña"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">CUBA LIBRE </h3>
         <br>
         <p>Ron + Jugo de 2 Rodajas de Limón + Hielo + Coca Cola</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>CAMIPIROSKA</h3>
-        <br>
-        <p>Vodka + Almíbar + 4 Rodajas de Lima + Hielo</p>
+        <span class="text-black text-center pp p-5" id="cubalibre"></span>
+
       </div>
-      <div class="col-6 mt-5"></div>
 
-
-      <div class="col-6 mt-5">
-        <h3>MALBEC SUSEP</h3>
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">MALBEC SUSEP</h3>
         <br>
         <p>Malbec + Vodka + Almíbar + Hierba Buena + 1 Rodaja de Naranja + Frutos Rojos + Azúcar</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>APEROL SPRITZ</h3>
+        <span class="text-black text-center pp p-5" id="malbec"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">APEROL SPRITZ</h3>
         <br>
         <p>Prosecco o Champagne + Aperol + Agua con Gas + Naranja + Hielo</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>NEGRONI</h3>
+        <span class="text-black text-center pp p-5" id="aperolspritz"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">NEGRONI</h3>
         <br>
         <p>Gin + Campari + Vermouth Rojo + Hielo + Naranja</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>SEX AND THE BITCH</h3>
+        <span class="text-black text-center pp p-5" id="negroni"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">SEX AND THE BITCH</h3>
         <br>
         <p>Vodka + Campari + Hesperidina + Jugo de Naranja + Hielo + Rodaja de Naranja</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>BAILEYS FROZEN</h3>
+        <span class="text-black text-center pp p-5" id="sexbitch"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">BAILEYS FROZEN</h3>
         <br>
         <p>Licor de Dulce de Leche + Baileys + Crema de Leche + Helado + Hielo</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>GANCIA</h3>
+        <span class="text-black text-center pp p-5" id="bailey"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">GANCIA</h3>
         <br>
         <p>Medida de Gancia + Sprite + Limón</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>FERNET</h3>
+        <span class="text-black text-center pp p-5" id="gancia"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">FERNET</h3>
         <br>
         <p>Medida de Fernet + Coca</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>Gin</h3>
+        <span class="text-black text-center pp p-5" id="fernet"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">Gin</h3>
         <br>
         <p>Medida de Gin + Agua Tónica + Fruta (opcional: limonada-maracuya-frutos rojos-pepino-pomelo-frutilla)</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>VODKA</h3>
+        <span class="text-black text-center pp p-5" id="gin"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">VODKA</h3>
         <br>
         <p>Medida de Vodka + Energizante + Fruta (limonada-maracuya-frutos rojos-pepino-pomelo-frutilla)</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>CAMPARI</h3>
+        <span class="text-black text-center pp p-5" id="vodka"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">CAMPARI</h3>
         <br>
         <p>Medida de Campari + Jugo de Naranja + Naranja</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>APEROL</h3>
+        <span class="text-black text-center pp p-5" id="campari"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">APEROL</h3>
         <br>
         <p>Medida de Aperol + Jugo de Naranja o Pomelo</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>WHISKY</h3>
+        <span class="text-black text-center pp p-5" id="aperol"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">WHISKY</h3>
         <br>
         <p>Medida de Whisky</p>
       </div>
-      <div class="col-6 mt-5"></div>
-
-
       <div class="col-6 mt-5">
-        <h3>LICOR</h3>
+        <span class="text-black text-center pp p-5" id="whisky"></span>
+
+      </div>
+
+       <div class="col-6 mt- 5">
+        <h3 class="marco p-2 text-center">RON</h3>
+        <br>
+        <p>Medida de Ron + Limón</p>
+      </div>
+      <div class="col-6 mt-5">
+        <span class="text-black text-center pp p-5" id="ron"></span>
+
+      </div>
+
+
+      <div class="col-6 mt-5 ">
+        <h3 class="marco p-2 text-center">LICOR</h3>
         <br>
         <p>Medida de Licor (Chocolate-Chocolate Blanco)</p>
       </div>
-      <div class="col-6 mt-5"></div>
+      <div class="col-6 mt-5">
+        <span class="text-black text-center pp p-5" id="licor"></span>
+
+      </div>
     </div>
   </div>
 
