--- a/menu-pizzamigo-english/web/index.html
+++ b/menu-pizzamigo-english/web/index.html
@@ -24,6 +24,7 @@
               <a class="nav-link text-light" href="plato.html">Lunch/Dinner</a>
               <a class="nav-link text-light" href="ensalada.html">Salads</a>
               <a class="nav-link text-light" href="bebidas.html">Beverages</a>
+              <a class="nav-link text-light" href="tragos.html">Drinks</a>
               <a class="nav-link text-light" href="postres.html">Desserts</a>
               <a class="text-light tit" href="../../menu-pizzamigo/web/index.html"><img class="logo-ingles " src="../../menu-pizzamigo/spanish-language.png"/> Spanish</a>
 
@@ -70,6 +71,18 @@
                <span class="texto">Beverages</span>
 
            </div>
+
+           <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
+            <a href="tragos.html"> <img class="redo" src="../../menu-pizzamigo/coctel-cubierto-rodaja-naranja.jpg" alt="Drinks"
+                srcset=""></a>
+          </div>
+          <div class="col-12 text-center text-light">
+            <span class="texto">Tragos</span>
+    
+          </div>
+    
+
+
            <div class=" col-12 mt-5 mb-3 d-flex justify-content-center">
             <a href="postres.html"> <img class="redo" src="../../menu-pizzamigo/kobby-mendez-idTwDKt2j2o-unsplash.jpg" alt="Postres" srcset=""></a>
          </div>
