--- a/menu-pizzamigo-english/web/tragos.html
+++ b/menu-pizzamigo-english/web/tragos.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/pizza.css">
-  <link rel="stylesheet" href="./css/tragos.css">
+  <link rel="stylesheet" href="../../menu-pizzamigo/web/css/style.css">
+  <link rel="stylesheet" href="../../menu-pizzamigo/web/css/pizza.css">
+  <link rel="stylesheet" href="../../menu-pizzamigo/web/css/tragos.css">
 
 
   <title>Tragos</title>
@@ -18,7 +18,7 @@
   <!-- nav -->
   <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
+      <a class="navbar-brand" href="#"><img src="../../menu-pizzamigo/PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,10 @@
           <a class="nav-link text-light" href="plato.html">Minutas</a>
           <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
           <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
-          <a class="nav-link text-light" href="#">Tragos</a>
+          <a class="nav-link text-light" href="#">Drinks</a>
           <a class="nav-link text-light" href="postres.html">Postre</a>
           <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
-              src="../idioma-en-ingles.png" /> English</a>
+              src="../../menu-pizzamigo/spanish-language.png" /> Spanish</a>
 
         </div>
       </div>
@@ -266,7 +266,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <script src="./js/tragos.js"></script>
+    <script src="../../menu-pizzamigo/web/js/tragos.js"></script>
 </body>
 
 </html>
