--- a/menu-pizzamigo/web/bebidas.html
+++ b/menu-pizzamigo/web/bebidas.html
@@ -32,6 +32,7 @@
             <a class="nav-link text-light" href="plato.html">Minutas</a>
             <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
             <a class="nav-link text-light" href="#">Bebidas</a>
+            <a class="nav-link text-light" href="tragos.html">Tragos</a>
             <a class="nav-link text-light" href="postres.html">Postre</a>
             <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
                 src="../idioma-en-ingles.png" /> English</a>
@@ -71,8 +72,8 @@
           <p>COCA COLA 1,5L.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="coca15l"></span>       
-         </div>
+          <span class="text-black text-center pp p-5" id="coca15l"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -80,7 +81,8 @@
           <p>FANTA 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="fanta1l"></span>        </div>
+          <span class="text-black text-center pp p-5" id="fanta1l"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -88,7 +90,8 @@
           <p> SPRITE 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="sprite1l"></span>        </div>
+          <span class="text-black text-center pp p-5" id="sprite1l"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -96,7 +99,8 @@
           <p>COCA COLA 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="coca300"></span>        </div>
+          <span class="text-black text-center pp p-5" id="coca300"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -104,7 +108,8 @@
           <p>FANTA 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="fanta300"></span>        </div>
+          <span class="text-black text-center pp p-5" id="fanta300"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -112,7 +117,8 @@
           <p>SPRITE 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="sprite300"></span>        </div>
+          <span class="text-black text-center pp p-5" id="sprite300"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -120,7 +126,8 @@
           <p>AGUA SABORIZADA 500 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="aguasav"></span>        </div>
+          <span class="text-black text-center pp p-5" id="aguasav"></span>
+        </div>
       </div>
 
       <!-- CERVEZA -->
@@ -135,7 +142,8 @@
           <p>SALTA RUBIA</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="saltarubia"></span>        </div>
+          <span class="text-black text-center pp p-5" id="saltarubia"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -143,7 +151,8 @@
           <p>SALTA NEGRA</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="saltanegra"></span>        </div>
+          <span class="text-black text-center pp p-5" id="saltanegra"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -151,7 +160,8 @@
           <p>HEINEKEN</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="heineken"></span>        </div>
+          <span class="text-black text-center pp p-5" id="heineken"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -159,7 +169,8 @@
           <p>IMPERIAL</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="imperial"></span>        </div>
+          <span class="text-black text-center pp p-5" id="imperial"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -167,7 +178,8 @@
           <p>MILLER</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="miller"></span>        </div>
+          <span class="text-black text-center pp p-5" id="miller"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -175,7 +187,8 @@
           <p>CORONA 710cc</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="corona710"></span>        </div>
+          <span class="text-black text-center pp p-5" id="corona710"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -183,7 +196,8 @@
           <p>CORONA 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="corona330"></span>        </div>
+          <span class="text-black text-center pp p-5" id="corona330"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -191,7 +205,8 @@
           <p>CERVEZA SOL 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="sol"></span>        </div>
+          <span class="text-black text-center pp p-5" id="sol"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -199,7 +214,8 @@
           <p>CERVEZA EN LATA</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="lata"></span>        </div>
+          <span class="text-black text-center pp p-5" id="lata"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -208,33 +224,9 @@
           </p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="laton"></span>        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-6 mt-5">
-          <p>FERNET + COCA CHICA</p>
+          <span class="text-black text-center pp p-5" id="laton"></span>
         </div>
-        <div class="col-6 mt-5">
-<span class="text-black text-center pp p-5" id="fernet"></span>        </div>
       </div>
-
-      <div class="row">
-        <div class="col-6 mt-5">
-          <p>CAMPARI ORANGE</p>
-        </div>
-        <div class="col-6 mt-5">
-<span class="text-black text-center pp p-5" id="campari"></span>        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-6 mt-5">
-          <p>GANCIA</p>
-        </div>
-        <div class="col-6 mt-5">
-<span class="text-black text-center pp p-5" id="gancia"></span>        </div>
-      </div>
-
 
     </div>
 
