--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -30,6 +30,7 @@
             <a class="nav-link text-light" href="plato.html">Minutas</a>
             <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
             <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+            <a class="nav-link text-light" href="tragos.html">Tragos</a>
             <a class="nav-link text-light" href="postres.html">Postre</a>
             <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
                 src="../idioma-en-ingles.png" /> English</a>
@@ -60,7 +61,7 @@
           <!-- <img class="precio-metro" src="../5000.png" alt="$5000" srcset=""> -->
         </div>
         <div class="col-6 d-flex justify-content-center">
-        <span class="text-black text-center pp p-5" id="pizzaMetro"></span>
+          <span class="text-black text-center pp p-5" id="pizzaMetro"></span>
 
           <!-- <img class="precio-metro" src="../10000.png" alt="$10000" srcset=""> -->
         </div>
