--- a/menu-pizzamigo-english/web/pizza.html
+++ b/menu-pizzamigo-english/web/pizza.html
@@ -31,6 +31,7 @@
             <a class="nav-link text-light" href="plato.html">Lunch/Dinner</a>
             <a class="nav-link text-light" href="ensalada.html">Salads</a>
             <a class="nav-link text-light" href="bebidas.html">Beverages</a>
+            <a class="nav-link text-light" href="tragos.html">Drinks</a>
             <a class="nav-link text-light" href="postres.html">Desserts</a>
           </div>
         </div>
