--- a/menu-pizzamigo-english/web/tragos.html
+++ b/menu-pizzamigo-english/web/tragos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -11,14 +11,15 @@
   <link rel="stylesheet" href="../../menu-pizzamigo/web/css/tragos.css">
 
 
-  <title>Tragos</title>
+  <title>DRINKS</title>
 </head>
 
 <body>
   <!-- nav -->
   <nav class="navbar sticky-top navbar-expand-lg bg-bermellon">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../../menu-pizzamigo/PIZZAMIGO-removebg-preview.png" alt="" srcset=""></a>
+      <a class="navbar-brand" href="#"><img src="../../menu-pizzamigo/PIZZAMIGO-removebg-preview.png" alt=""
+          srcset=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,13 +27,13 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link text-light active" aria-current="page" href="index.html">Inicio</a>
-          <a class="nav-link text-light" href="pizza.html">Pizza</a>
-          <a class="nav-link text-light" href="desayuno.html">Desayuno/Merienda</a>
-          <a class="nav-link text-light" href="plato.html">Minutas</a>
-          <a class="nav-link text-light" href="ensalada.html">Ensaladas</a>
-          <a class="nav-link text-light" href="bebidas.html">Bebidas</a>
+          <a class="nav-link text-light" href="pizza.html">Pizzas</a>
+          <a class="nav-link text-light" href="desayuno.html">Breakfast/Snack</a>
+          <a class="nav-link text-light" href="plato.html">Lunch/Dinner</a>
+          <a class="nav-link text-light" href="ensalada.html">Salads</a>
+          <a class="nav-link text-light" href="bebidas.html">Beverages</a>
           <a class="nav-link text-light" href="#">Drinks</a>
-          <a class="nav-link text-light" href="postres.html">Postre</a>
+          <a class="nav-link text-light" href="postres.html">Desserts</a>
           <a class="text-light tit" href="../../menu-pizzamigo-english/web/index.html"><img class="logo-ingles "
               src="../../menu-pizzamigo/spanish-language.png" /> Spanish</a>
 
@@ -44,7 +45,7 @@
   <div class="container text-light  texto">
     <div class="row">
       <div class="col-12 tragos">
-        <h2 class="mt-4 text-light"> TRAGOS</h2>
+        <h2 class="mt-4 text-light"> DRINKS</h2>
       </div>
     </div>
 
@@ -52,7 +53,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">MOJITOS</h3>
         <br>
-        <p>Azúcar + Hielo Picado + Limón Picado + Ron + Menta en Ramas</p>
+        <p>Sugar + Crushed Ice + Chopped Lemon + Ron + Mint</p>
       </div>
       <div class="col-6 text-end  mt-5">
         <span class="text-black  pp p-5" id="mojitos"></span>
@@ -62,7 +63,8 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">DAIQUIRI</h3>
         <br>
-        <p>Azúcar + Hielo Picado + Ron + Zumo de Limón + Rodaja de Limón</p>
+        <p>Sugar + Crushed Ice + Ron +
+          Lemon Juice + Lemon slice</p>
       </div>
       <div class="col-6 mt-5 text-end">
         <span class="text-black pp p-5" id="daiquiri"></span>
@@ -72,7 +74,8 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">CAIPIROSKA</h3>
         <br>
-        <p>Vodka + Almíbar + 4 Rodajas de Lima + Hielo</p>
+        <p>Vodka +
+          Syrup + 4 Lime Slices + Ice</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black pp p-5" id="caipiroska"></span>
@@ -83,7 +86,9 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">CAIPIRIÑA</h3>
         <br>
-        <p>Limón Cortado + Cachaça + Almíbar + Hielo</p>
+        <p>Lemon Slices
+          + Cachaça +
+          Syrup + Ice</p>
       </div>
       <div class="col-6 text-end  mt-5">
         <span class="text-black  pp p-5" id="caipiriña"></span>
@@ -94,7 +99,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">CUBA LIBRE </h3>
         <br>
-        <p>Ron + Jugo de 2 Rodajas de Limón + Hielo + Coca Cola</p>
+        <p>Ron + Lemon Juice+ Ice + Coke</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="cubalibre"></span>
@@ -104,7 +109,8 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">MALBEC SUSEP</h3>
         <br>
-        <p>Malbec + Vodka + Almíbar + Hierba Buena + 1 Rodaja de Naranja + Frutos Rojos + Azúcar</p>
+        <p>Malbec + Vodka +
+          Syrup + Peppermint + 1 Slice of Orange + red berries + Sugar</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="malbec"></span>
@@ -115,7 +121,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">APEROL SPRITZ</h3>
         <br>
-        <p>Prosecco o Champagne + Aperol + Agua con Gas + Naranja + Hielo</p>
+        <p>Prosecco or Champagne + Aperol + Soda Water + Orange + Ice</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black pp p-5" id="aperolspritz"></span>
@@ -126,7 +132,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">NEGRONI</h3>
         <br>
-        <p>Gin + Campari + Vermouth Rojo + Hielo + Naranja</p>
+        <p>Gin + Campari + Red Vermouth + Ice + Orange</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="negroni"></span>
@@ -137,7 +143,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">SEX AND THE BITCH</h3>
         <br>
-        <p>Vodka + Campari + Hesperidina + Jugo de Naranja + Hielo + Rodaja de Naranja</p>
+        <p>Vodka + Campari + Hesperidin + Orange Juice  + Ice + Slice of Orange</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="sexbitch"></span>
@@ -148,7 +154,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">BAILEYS FROZEN</h3>
         <br>
-        <p>Licor de Dulce de Leche + Baileys + Crema de Leche + Helado + Hielo</p>
+        <p>Dulce de Leche Liqueur + Baileys + Single Cream  + Ice Cream + Ice</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="bailey"></span>
@@ -159,7 +165,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">GANCIA</h3>
         <br>
-        <p>Medida de Gancia + Sprite + Limón</p>
+        <p>Measure of Gancia + Sprite + Lemon</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black pp p-5" id="gancia"></span>
@@ -170,7 +176,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">FERNET</h3>
         <br>
-        <p>Medida de Fernet + Coca</p>
+        <p>Measure of Fernet + Coke</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="fernet"></span>
@@ -181,7 +187,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">Gin</h3>
         <br>
-        <p>Medida de Gin + Agua Tónica + Fruta (opcional: limonada-maracuya-frutos rojos-pepino-pomelo-frutilla)</p>
+        <p>Measure of Gin + Tonic Water + Fruit (optional: lemonade-passion fruit-berries-cucumber-grapefruit-Strawberry)</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="gin"></span>
@@ -192,7 +198,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">VODKA</h3>
         <br>
-        <p>Medida de Vodka + Energizante + Fruta (limonada-maracuya-frutos rojos-pepino-pomelo-frutilla)</p>
+        <p>Measure of Vodka + Energy Drink + Fruit (lemonade-passion fruit-berries-cucumber-grapefruit-Strawberry)</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="vodka"></span>
@@ -203,7 +209,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">CAMPARI</h3>
         <br>
-        <p>Medida de Campari + Jugo de Naranja + Naranja</p>
+        <p>Measure of Campari + Orange juice+ Orange Slice</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="campari"></span>
@@ -214,7 +220,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">APEROL</h3>
         <br>
-        <p>Medida de Aperol + Jugo de Naranja o Pomelo</p>
+        <p>Measure of Aperol + Oranje Juice or  Pomelo Juice</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black pp p-5" id="aperol"></span>
@@ -225,17 +231,17 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">WHISKY</h3>
         <br>
-        <p>Medida de Whisky</p>
+        <p>Measure of Whisky</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="whisky"></span>
 
       </div>
 
-       <div class="col-6 mt- 5">
+      <div class="col-6 mt- 5">
         <h3 class="marco p-2 text-center">RON</h3>
         <br>
-        <p>Medida de Ron + Limón</p>
+        <p>Measure of Ron + Lemon Slice</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="ron"></span>
@@ -246,7 +252,7 @@
       <div class="col-6 mt-5 ">
         <h3 class="marco p-2 text-center">LICOR</h3>
         <br>
-        <p>Medida de Licor (Chocolate-Chocolate Blanco)</p>
+        <p>Measure of Spirits (Chocolate - White Chocolate)</p>
       </div>
       <div class="col-6 text-end mt-5">
         <span class="text-black  pp p-5" id="licor"></span>
@@ -266,7 +272,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <script src="../../menu-pizzamigo/web/js/tragos.js"></script>
+  <script src="../../menu-pizzamigo/web/js/tragos.js"></script>
 </body>
 
 </html>
