--- a/menu-pizzamigo-english/web/index.html
+++ b/menu-pizzamigo-english/web/index.html
@@ -77,7 +77,7 @@
                 srcset=""></a>
           </div>
           <div class="col-12 text-center text-light">
-            <span class="texto">Tragos</span>
+            <span class="texto">Drinks</span>
     
           </div>
     
