--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -308,13 +308,10 @@
 
       <!-- fin sandwich -->
 
-      <div class="col-6"></div>
-      <div class="col-6 mt-5">
-        <h2 class="marco  text-center">PASTAS</h2>
-      </div>
+ 
       <!-- contenido Pastas -->
-      <div class="col-6 mt-5 ">
-        <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
+       <div class="col-6 mt-5 ">
+      <!--  <img class="precio " src="../precio-sin-num.png" alt="precio" srcset="">
       </div>
       <div class="col-6 mt-5 text-end">
         <p>Tallarines</p>
@@ -344,10 +341,10 @@
       </div>
       <div class="col-6 mt-5 text-end">
         <p>Ñoquis</p>
-      </div>
+      </div> -->
       <!-- fin pastas -->
       <!-- contenido salsas -->
-      <div class="col-12 mt-5">
+      <!-- <div class="col-12 mt-5">
         <h2 class="marco  text-center">SALSAS</h2>
       </div>
 
@@ -358,7 +355,7 @@
         <p class=" text-end">........Fileto</p>
         <p class=" text-start">Roja...........</p>
 
-      </div>
+      </div> -->
 
       <!-- fin de salsas -->
     </div>
