--- a/menu-pizzamigo-english/web/bebidas.html
+++ b/menu-pizzamigo-english/web/bebidas.html
@@ -65,13 +65,7 @@
           <span class="text-black text-center pp p-5" id="coca1l"></span>        </div>
       </div>
 
-      <div class="row">
-        <div class="col-6 mt-5">
-          <p>COKE 1,5L.</p>
-        </div>
-        <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="coca15l"></span>        </div>
-      </div>
+      
 
       <div class="row">
         <div class="col-6 mt-5">
@@ -91,15 +85,23 @@
 
       <div class="row">
         <div class="col-6 mt-5">
+          <p>COKE 1,5L.</p>
+        </div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="coca15l"></span>        </div>
+      </div>
+<!-- 
+      <div class="row">
+        <div class="col-6 mt-5">
           <p>COKE 300 cc.</p>
         </div>
         <div class="col-6 mt-5">
           <span class="text-black text-center pp p-5" id="coca300"></span>        </div>
-      </div>
+      </div> -->
 
       <div class="row">
         <div class="col-6 mt-5">
-          <p>FANTA 300 cc.</p>
+          <p>FANTA 1.5L.</p>
         </div>
         <div class="col-6 mt-5">
           <span class="text-black text-center pp p-5" id="fanta300"></span>        </div>
@@ -107,7 +109,7 @@
 
       <div class="row">
         <div class="col-6 mt-5">
-          <p>SPRITE 300 cc.</p>
+          <p>SPRITE 1.5L.</p>
         </div>
         <div class="col-6 mt-5">
           <span class="text-black text-center pp p-5" id="sprite300"></span>        </div>
